# red-ink-document-annotation-app

./: .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: documents.py  share.py  users.py
chrome-extension/: README.md  background.js  content.css  content.js  generate_icons.py  manifest.json  options.html  options.js  popup.html  popup.js
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: AdminDocuments.jsx  AnnotationCanvas.jsx  DocumentViewer.jsx  FileUpload.jsx  MyDocuments.jsx  SharedView.jsx  Toolbar.jsx
frontend/src/hooks/: useAutoSave.js
